skins/default/css/style.css
@font-face {
   font-family: OSP-DIN;
   src: url(../font/OSP-DIN.ttf);
}

body {
text-align: center;
background: gray;
color: white;
font-family: 'OSP-DIN', Arial, sans-serif;
margin: 0px;
padding: 0px;
}

a {
color: inherit;
text-decoration: inherit;
}

#wrapper {
position: fixed;
width: 80%;
height: 30%;
}
#attribution {
position: absolute;
top: 0px;
right: 0px;
}

#display {
width: 100%;
height: 60%;
text-align: center;
background: black;
}

.forecast {
width: 20%;
}

#forecast1 {
color: #FFFFFF;
}
#forecast2 {
color: #CCCCCC;
}
#forecast3 {
color: #999999;
}
#forecast4 {
color: #777777;
}
#forecast5 {
color: #777777;
}
/*
*/
.wi {
font-size: 7vmin;
 line-height: 42vmin !important;
}
#currently {
 height: 80vh;
}
#currentlyTime {
 font-size: 18px;
 margin-bottom: 4vmin;
}
#currently .wi {
font-size: 28vmin;
}

#forecastHeading {
height: 20px;
}
#forecast {
 font-size: 15vmin;
 margin-bottom: 4vmin;
}

.day {
font-size: 3.5vmin;
margin-bottom: 1.5vmin;
}
.desc {
font-size: 3.5vmin;
 margin-top: 2.5vmin;
margin-bottom: 0.5vmin;
}
.highTemp {
font-size: 3vmin;
}
.lowTemp {
font-size: 3vmin;
}
.currentTemp {
 font-size: 5.5vmin;
}
.temp {
 font-size: 20vmin;
}
#currentlyHeading {
font-size: 50vmin;
}
#currently .desc {
font-size: 8vmin;
margin-bottom: 0.5vmin;
}
#currently .tvminp {
font-size: 10.5vmin;
}

.separator{
 /*font-size: 45vmin;*/
 /*margin:0px;
 padding:0px;*/
 /*background:green;*/
 animation: blinker 2s linear infinite;
}
@keyframes blinker{
50% {opacity: 0;}
}
#time {
font-size: 55vmin;
margin:0px;
padding:0px;
word-spacing: -30px;
letter-spacing: -2px;
}
#hours{
/*background:red;*/
margin:0px;
padding:0px;
}
#date {
font-size: 15vmin;
color: #CCCCCC;
}

#currentlyWrapper {
display: inline-block;
height: 100%;
width: 100%;
background: rgba(255,255,255,0.2);
padding-top: 4vh;
}

